--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../Proyecto-apeperia/css/reset.css">
-    <link rel="stylesheet" href="/css/head.css">
-    <link rel="stylesheet" href="/css/llamada.css">
-    <link rel="stylesheet" href="/css/planes.css">
-    <link rel="stylesheet" href="/css/bases.css">
-    <link rel="stylesheet" href="/css/destacados.css">
-    <link rel="stylesheet" href="/css/diferenciales.css">
-    <link rel="stylesheet" href="/css/sobre-nosotros.css">
-    <link rel="stylesheet" href="/css/contacto.css">
-    <link rel="stylesheet" href="/css/institucional.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/head.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/llamada.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/planes.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/bases.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/destacados.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/diferenciales.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/sobre-nosotros.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/contacto.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/institucional.css">
+    <link rel="stylesheet" href="../Proyecto-apeperia/css/footer.css">
 
 </head>
 <body>
