fix: :bug: Se solucionó un bug del index con los archivos css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../Proyecto-apeperia/css/reset.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="../Proyecto-apeperia/css/head.css">
     <link rel="stylesheet" href="../Proyecto-apeperia/css/llamada.css">
     <link rel="stylesheet" href="../Proyecto-apeperia/css/planes.css">
@@ -55,7 +55,7 @@
             </a>
             <a href="#">
                 <figure class="destacados__panel">
-                    <img src="/img/sugestiones-fotografias.png" alt="Panel de la publicación sobre consejos de fotografía" class="destacados__panel-imagen">
+                    <img src="img/sugestiones-fotografias.png" alt="Panel de la publicación sobre consejos de fotografía" class="destacados__panel-imagen">
                     <figC class="destacados__panel-texto">¿Trabajas con fotografía? Conozca esos consejos</figC>
                 </figure>
             </a><a href="" class="destacados__boton boton">Recibir destacados por correo</a>
@@ -163,7 +163,7 @@
                         </article>
                     </address>
                 </div>
-                <video src="/img/formacion-java.mp4" class="institucional__video" controls></video>
+                <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
             </div>
         </section>
 
