--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/assets/css/institucional.css" />
     <link rel="stylesheet" href="/assets/css/footer.css" />
   </head>
+
   <body>
     <header class="head container">
       <img
@@ -48,8 +49,8 @@
       <section class="llamada container">
         <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
         <p class="llamada__texto">
-          Apeperia es una empresa emergente con una manera inovadora de comprar
-          y crear aplicaciones móviles y web.
+          Apeperia es una empresa emergente con una manera inovadora de comprar y
+          crear aplicaciones móviles y web.
         </p>
         <a class="llamada__boton boton" href="#">Conozca los planes</a>
       </section>
@@ -89,8 +90,8 @@
           <li class="diferenciales__item diferenciales__item-reloj">
             <h2 class="item__titulo">Tiempo</h2>
             <p class="item__texto">
-              ¡El tiempo es importante! Trabajamos en ritmo acelerado, para
-              atender los plazos rigurosamente.
+              ¡El tiempo es importante! Trabajamos en ritmo acelerado, para atender
+              los plazos rigurosamente.
             </p>
           </li>
           <li class="diferenciales__item diferenciales__item-dinero">
@@ -103,8 +104,8 @@
           <li class="diferenciales__item diferenciales__item-quimica">
             <h2 class="item__titulo">Especialistas</h2>
             <p class="item__texto">
-              Equipo especializada, con experiencia de mercado. Testamos todos
-              los productos antes del lanzamiento.
+              Equipo especializada, con experiencia de mercado. Testamos todos los
+              productos antes del lanzamiento.
             </p>
           </li>
         </ul>
@@ -125,14 +126,17 @@
           <p
             class="sobre_nosotros__texto sobre-nosotros__texto--destacado sobre-nosotros__texto--division"
           >
-            ¡Tenemos un equipo especializado y exclusivo para proyectos
-            increíbles!
+            ¡Tenemos un equipo especializado y exclusivo para proyectos increíbles!
           </p>
           <ul class="sobre_nosotros__plataformas">
             <li><img src="/assets/img/android.png" alt="Ícono del Android" /></li>
-            <li><img src="/assets/img/blackberry.png" alt="Ícono del Blackberry" /></li>
+            <li>
+              <img src="/assets/img/blackberry.png" alt="Ícono del Blackberry" />
+            </li>
             <li><img src="/assets/img/apple.png" alt="Ícono de la Apple" /></li>
-            <li><img src="/assets/img/windowsphone.png" alt="Ícono del Windows" /></li>
+            <li>
+              <img src="/assets/img/windowsphone.png" alt="Ícono del Windows" />
+            </li>
           </ul>
           <p class="sobre_nosotros__texto">
             Desarrollamos aplicaciones para todas plataformas
